--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,11 +20,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
-  max-width: 1920px;
+  max-width: 1400px;
   height: 100%;
   max-height: 124px;
+  padding: 0 260px;
   background-color: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(12, 47, 136, 0.15);
 
