--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,7 +25,7 @@
   max-width: 1400px;
   height: 100%;
   max-height: 124px;
-  padding: 0 260px;
+  padding: 0 13%;
   background-color: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(12, 47, 136, 0.15);
 
@@ -67,8 +67,7 @@
 
   &-search {
     height: 48px;
-    width: 100%;
-    max-width: 431px;
+    width: 431px;
     border: 1px solid #3F4449;
     box-sizing: border-box;
     border-radius: 2px;
@@ -116,6 +115,88 @@
     &:hover {
       cursor: pointer;
       text-shadow: 0px 0px 1px #3F4449;
+    }
+  }
+}
+
+.main {
+
+  &-info {
+    width: 100%;
+    max-width: 1920px;
+    height: 620px;
+    background: url('../assets/images/Cover.png');
+
+    &-header {
+      display: flex;
+      align-items: center;
+      height: 345px;
+      width: 528px;
+      padding-left: 13%;
+      font-family: Noto Sans;
+      font-size: 42px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 49px;
+      letter-spacing: 0em;
+      color: #FFFFFF;
+    }
+
+    &-cards {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 21%;
+    }
+
+    &-cardArea {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      height: 198px;
+      width: 350px;
+      background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
+    }
+
+    &-cardArticle {
+      width: 350px;
+      height: 20px;
+      font-family: Noto Sans;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+      text-align: center;
+      text-transform: uppercase;
+      color: #0158BA;
+    }
+
+    &-cardText {
+      width: 282px;
+      height: 72px;
+      font-family: Noto Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 24px;
+      color: #3F4449;
+    }
+
+    &-cardLink {
+      align-self: baseline;
+      padding-left: 33px;
+      font-family: Noto Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 24px;
+      color: #3F97FB;
+
+      &:hover {
+        cursor: pointer;
+        text-shadow: 0px 0px 1px #7bb7f3;
+      }
     }
   }
 }
