--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,7 @@
 .wrapper {
   width: 100%;
   max-width: 1920px;
-  height: 1750px;
+  height: 1729px;
 }
 
 .header {
@@ -47,11 +47,11 @@
   letter-spacing: -0.015em;
   text-align: left;
   color: #3F4449;
-  cursor: pointer;
 }
 .header-nav-navItems:hover {
   font-weight: 800;
   text-shadow: 0px 0px 1px #3F4449;
+  cursor: pointer;
 }
 .header-searchForm {
   display: flex;
@@ -240,6 +240,150 @@
 .main-projects-slideLink:hover {
   cursor: pointer;
   text-shadow: 0px 0px 1px #7bb7f3;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  max-width: 1920px;
+  height: 183px;
+  background: #FFFFFF;
+}
+.footer-nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 604px;
+  height: 27px;
+}
+.footer-nav-navItems {
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: -0.015em;
+  color: #3F4449;
+}
+.footer-nav-navItems:hover {
+  font-weight: 800;
+  text-shadow: 0px 0px 1px #3F4449;
+  cursor: pointer;
+}
+.footer-icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 145px;
+  height: 28px;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 18%;
+  left: 37%;
+  width: 440px;
+  height: 467px;
+  padding: 20px 20px 55px 20px;
+  background: white;
+  visibility: hidden;
+}
+.login-closeButton {
+  align-self: flex-end;
+}
+.login-closeButton:hover {
+  cursor: pointer;
+  outline: 1px solid #3F4449;
+}
+.login-title {
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 38px;
+  letter-spacing: -0.015em;
+  color: #3F4449;
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 360px;
+  height: 303px;
+}
+.login-form-name, .login-form-password {
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #3F4449;
+}
+.login-form-name:hover, .login-form-password:hover {
+  cursor: pointer;
+}
+.login-form-nameInput, .login-form-passwordInput {
+  height: 54px;
+  width: 360px;
+  background: rgba(189, 220, 254, 0.05);
+  border: 1px solid #BDDCFE;
+  box-sizing: border-box;
+  border-radius: 2px;
+}
+.login-form-nameInput {
+  margin-bottom: 23px;
+}
+.login-form-forgotPassword {
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration-line: underline;
+  color: #3F97FB;
+}
+.login-form-forgotPassword:hover {
+  cursor: pointer;
+  text-shadow: 0px 0px 1px #91bde8;
+}
+.login-form-loginButton, .login-form-signinButton {
+  width: 360px;
+  height: 60px;
+  margin-top: 40px;
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  background: #3F97FB;
+  border: 0;
+  border-radius: 100px;
+}
+.login-form-loginButton:hover, .login-form-signinButton:hover {
+  cursor: pointer;
+  text-shadow: 0px 0px 1px white;
+  box-shadow: 0px 0px 6px #6c96ca;
+}
+.login-form-signinButton {
+  align-self: center;
+  width: 58px;
+  height: 24px;
+  margin-top: 0;
+  font-size: 18px;
+  color: #3F97FB;
+  background: white;
+}
+.login-form-signinButton:hover {
+  text-shadow: 0px 0px 1px #91bde8;
+  box-shadow: none;
 }
 
 .slider {
